linking the pages together. Waiting for index & events to proceed. traslated About and half of Courses. Waiting for adjustments to the latest to continue.

--- a/about.html
+++ b/about.html
@@ -23,20 +23,19 @@
 			</div>
 
 			<div id="flag">
-				<img src="img/it_flag.png" alt="italian flag">
+				<a href="aboutit.html"><img src="img/it_flag.png" alt="italian flag"></a>
 			</div>
 		</div>
 	</header>
 	<div id="navWrap">
 		<nav>
-			<ul>	
-				<li><a href="">Home</a></li>
-				<li><a href="">About</a></li>
-				<li><a href="">Courses</a></li>
-				<li><a href="">Events</a></li>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="courses.html">Courses</a></li>
+				<li><a href="events.html">Events</a></li>
 				<li><a href="news.html">News</a></li>
-				<li><a href="">Contact</a></li>
-
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -61,13 +60,13 @@
 			<article>
 				<h2>Branches of Da Vinci University</h2>
 				<p>
-					Our University so far has two locations. Those are in Emmen and Groningen. Both locations are fully open to all students of Da Vinci University no matter the campus. Therefore, thanks to the small distance, all students are welcome to use facilities of both campuses.
+					Our university so far has two locations. Those are in Emmen and Groningen. Both locations are fully open to all students of Da Vinci University no matter the campus. Therefore, thanks to the small distance, all students are welcome to use facilities of both campuses.
 				</p>
 			
 			</article>
 			
 			<article>
-				<h2>Courses available</h2>
+				<h2>Courses Available</h2>
 				<p>
 					Our university provides a variety of courses to choose from. For the most technical ones we have Electrical Engineering course. For those eager to know how to find everything we have Information Technology. For the romantic creators we have a course of Building Classical Instruments. And, of course, we can accommodate the most lively and technology-friendly students with our Electronic Music course.
 				</p>
@@ -75,9 +74,9 @@
 			</article>
 			
 			<article>
-				<h2>Learning style</h2>
+				<h2>Learning Style</h2>
 				<p>
-					For our university we chose to have a diverse style of obtaining skills and education. We decided, that the best way to prepare students for real world is to give them viewpoints both from practical and theoretical sides. This means that apart from more practical workshops, we also have a program of project based learning, where students get a case, and through theoretical approaches try to figure out resolutions.
+					For our university we chose to have a diverse style of obtaining skills and education. We decided that the best way to prepare students for real world is to give them viewpoints both from practical and theoretical sides. This means that apart from more practical workshops, we also have a program of project based learning, where students get a case, and through theoretical approaches try to figure out resolutions.
 				</p>
 			
 			</article>
@@ -115,13 +114,12 @@
 			<div class="footBox">
 				<h3>Da Vinci University</h3>
 				<ul>
-					<li>Home</li>
-					<li>About</li>
-					<li>Courses</li>
-					<li>Events</li>
-					<li>News</li>
-					<li>Contact</li>
-
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="courses.html">Courses</a></li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="news.html">News</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<div class="footBox">
