--- a/aboutit.html
+++ b/aboutit.html
@@ -23,7 +23,7 @@
 			</div>
 
 			<div id="flag">
-				<a href="about.html"><img src="img/uk_flag.png" alt="brittish flag"></a>
+				<a href="index.html"><img src="img/uk_flag.png" alt="brittish flag"></a>
 			</div>
 		</div>
 	</header>
@@ -42,36 +42,43 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<h2>Studia al estero con<br>Da Vinci University</h2>
+				<h2>Su Da Vinci University</h2>
 				<p>
-					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?
+					Quando arriverai alla nostra università vedrai subito che si incarna perfettamente il significato del suo nome. Siamo come Da Vinci - uniamo varie discipline in un unico luogo, portiamo tutto insieme e lo facciamo lavorare come una macchina ben costruita.
 				</p>
+			
 			</article>
-			<article class="dualbox">
-				<div class="indexbox" id="campusbox">
-					<a href="">
-						<div class="overlay">
-							Campus
-						</div>
-					</a>
-				</div>
-				<div class="indexbox" id="coursebox">
-					<a href="">
-						<div class="overlay">
-							Corsi
-						</div>
-					</a>
-				</div>			
-			</article>
+			
 			<article>
-				<h2>Più di un semplice numero</h2>
+				<h2>Il Nostro Logo</h2>
 				<p>
-				quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?
+					Il nostro logo è un modello virtuale del famoso uomo Vitruviano di Da Vinci. Come si sa, l'uomo Vitruviano è una rappresentazione visiva dei canoni della proporzione. L'uomo e l'architettura si uniscono perfettamente insieme in un'unica immagine della proporzione del tutto. Così come la nostra univerità - uniamo uomo e disciplina, portando insime le due e dandosi il meglio a vicenda.
 				</p>
-
+			
+			</article>
+			
+			<article>
+				<h2>Facoltà Della Da Vinci University</h2>
 				<p>
-				magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit? quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+					La nostrà univerità ha al momento due location. Situata in Emmen e Groningen. Entrambe le location sono completamente aperte a tutti gli studenti della Da Vinci University, a prescindere dal campus di appartenenza. Perciò, grazie alla poca distanza tra le due, tutti gli studenti sono i benvenuti a usare le apparechiature da entrambi i campus.
 				</p>
+			
+			</article>
+			
+			<article>
+				<h2>Corsi Disponibili</h2>
+				<p>
+					La nostra univerità fornisce una varietà di corse tra cui scegliere. Per i più tecnici abbiamo il corso di Ingegneria Elettronica. Per quelli ansiosi di sapere tutto abbiamo Ingegneria Informatica. Per i romantici creatori abbiamo un corso di Costruzione di Strumenti Classici. E, ovviamete, possiamo accomodare i più vivaci e tecno-friendly studenti con il nostro corso di Musica Elettronica.
+				</p>
+			
+			</article>
+			
+			<article>
+				<h2>Stile di Apprendimento</h2>
+				<p>
+					Per la nostra univerità abbiamo scelto un diverso modo per ottenere le abbilità e l'educazione. Abbiamo deciso che il modo migliore di preparare gli studenti al mondo reale fosse quello di dargli dei punti di vista sia pratici che teorici. Questo significa che, apparte i nostri labboratori più pratici, abbiamo anche un programma basato sull'apprendimento, dove gli studenti prendono un caso e, grazie ad approcci teoretici, provano a trovare una soluzione.
+				</p>
+			
 			</article>
 		</div>
 		<aside>
@@ -97,7 +104,7 @@
 	<footer>
 		<div class="footWrap">
 			<div class="footBox">
-				<h3>Dove siamo</h3>
+				<h3>Locations</h3>
 				<ul>
 					<li>Emmen</li>
 					<li>Groningen</li>
