--- a/courses.html
+++ b/courses.html
@@ -21,7 +21,7 @@
 			</div>
 
 			<div id="flag">
-				<img src="img/it_flag.png" alt="italian flag">
+				<a href="coursesit.html"><img src="img/it_flag.png" alt="italian flag"></a>
 			</div>
 		</div>
 	</header>
@@ -34,7 +34,6 @@
 				<li><a href="events.html">Events</a></li>
 				<li><a href="news.html.php">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
-
 			</ul>
 		</nav>
 	</div>
@@ -85,13 +84,13 @@
 				</div>
 				<h2>Introduction</h2>
 				<p>
-					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge and our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
 				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Electrical engineering gets used to the study load. 
+					<b>Year one</b> - Foundation phase. In the first half, you'll get to know the field of Electrical engineering gets used to the study load. 
 					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: embedded systems and power systems
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship. 
+					<br><br><b>Year three</b> - This year you'll get to experience the field by going on an internship. 
 					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
 				</p>
 				<h2>Career prospects </h2>
@@ -107,13 +106,13 @@
 				</div>
 				<h2>Introduction</h2>
 				<p>
-					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge and our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
 				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					<b>Year one</b> - Foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
 					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					<br><br><b>Year three</b> - This year you'll get to experience the field by going on an internship.
 					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
 				</p>
 				<h2>Career prospects</h2>
@@ -131,13 +130,13 @@
 				</div>
 				<h2>Introduction</h2>
 				<p>
-					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge and our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
 				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					<b>Year one</b> - Foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
 					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					<br><br><b>Year three</b> - This year you'll get to experience the field by going on an internship.
 					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
 				</p>
 				<h2>Career prospects</h2>
@@ -154,13 +153,13 @@
 				</div>
 				<h2>Introduction</h2>
 				<p>
-					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge and our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
 				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					<b>Year one</b> - Foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
 					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					<br><br><b>Year three</b> - This year you'll get to experience the field by going on an internship.
 					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
 				</p>
 				<h2>Career prospects</h2>
@@ -205,13 +204,12 @@
 			<div class="footBox">
 				<h3>Da Vinci University</h3>
 				<ul>
-					<li>Home</li>
-					<li>About</li>
-					<li>Courses</li>
-					<li>Events</li>
-					<li>News</li>
-					<li>Contact</li>
-
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="courses.html">Courses</a></li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="news.html.php">News</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<div class="footBox">
