--- a/coursesit.html
+++ b/coursesit.html
@@ -27,7 +27,7 @@
 	</header>
 	<div id="navWrap">
 		<nav>
-			<ul>
+			<ul>	
 				<li><a href="indexit.html">Home</a></li>
 				<li><a href="aboutit.html">Su di noi</a></li>
 				<li><a href="coursesit.html">Corsi</a></li>
@@ -40,36 +40,133 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div id='electricalEngineering'>
-					<div class="overlay">
-						<p>Electrical engineering</p>
+				<div class="banner" id='general'>
+					<div class="overlayNoTransition">
+						<p>General requirements</p>
+					</div>
+				</div>
+				<h2>Scadenza per l'applicazione</h2>
+				<p><b>Inizio di Settembre</b></p>
+				<p>Candidati EU/EER: 15 Agosto
+				<br>Candidati Non-EU: 31 Maggio</p>
+				<p><b>Inizio di Febbraio</b></p>
+				<p>Candidati EU/EER: 17 Gennaio
+				<br>Candidati Non-EU: 31 Ottobre</p>
+				<p>
+					Quello che ci importa di più è la tua motivazione. Ti suggeruamo di investire una buona quantità di tempo per scrivere la tua lettera motivazionale. Inoltre, dato che i corsi sono in Inglese, ci aspettiamo che tu abbia passato i tuoi test di Inglese. In passo puoi vedere una lista di test di Inglese accettabili.
+				</p>
+				<h2>Requisiti di Inglese</h2>
+				<p>
+					Un risultato <b>IELTS</b> di almeno <b>5.0</b> o un risultato <b>TOEFL</b> di <b>500</b> (su carta),<b>173</b> (su computer) o <b>60</b> (su internet) o anche un risultato <b>Cambridge ESOL</b> di <b>FCE-C</b>.
+					<br><br><b>Diploma di Maturità</b> distribuito da un istituto qualificato.
+				<br><br></p>
+				
+</article>
+
+				<article>
+				<div class="banner" id='apply'>
+					<div class="overlayNoTransition">
+						<p>Come Iscriversi</p>
+					</div>
+				</div>
+				<h2>Procedure di iscrizione</h2>
+				<br><p><b>Step 1</b> -	Controllare i requisiti generali		</p>
+				<br><p><b>Step 2</b> -	Registrarsi su Studielink     		 	</p>
+				<br><p><b>Step 3</b> - 	Inoltrare i documenti per l'iscrizione	</p>
+				<br><p><b>Step 4</b> - 	Finalizare la propria applicazione    	</p><br>
+				</article>
+				
+			<article>
+				<div class="banner" id='electricalEngineering'>
+					<div class="overlayNoTransition">
+						<p>Ingegneria Elettronica</p>
 					</div>
 				</div>
 				<h2>Introduzione</h2>
 				<p>
-					Il corso di Ingegneria Elettronica alla Da Vinci University ti darà un ottimo punto di partenza in questo campo emozionante. Con il nostro grandioso team di insegnanti, espanderai il tuo sapere nel campo dell'Ingegneria Elettronica. Puoi iniziare i tuoi studi senza nessuna conoscenza di base e il nostro team ti guiderà attaverso il corso rispondendo a tutte le tue domande.
+					Il corso di Ingegneria Elettronica alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo dell'Ingegneria Elettronica. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
-				<h2>In cosa consiste</h2>
+				<h2>Contenuti</h2>
 				<p>
-					Primo anno - Fase di inizio. Nella prima metà, inizierai a conoscere il campo di Ingegneria Elettronica e ti abbituerai alle nuove quantità di studio. Secondo anno - L'attenzione si sposta su specifiche materie di studio: sistemi integrati e sistemi di potenza.
-					Terzo anno - Quest'anno farai pratica sul campo facendo tirocinio. Quarto anno - Andrai in uno scambio culturale - puoi scegliere la nazione che più ti interessa.
+					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
+					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: sistemi integrati e sistemi di potenza.
+					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
+					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
 				</p>
+				<h2>Prospettive di Carriera</h2>
+				<p>
+					Dopo il completamento del corso potrai lavorare nel campo dell'Ingegneria Elettronica come ingegnere di qualità, dei software o degli hardware.
+				<br><br></p>
 			</article>
 			<article>
-				<div id='informationTechnology'>
-					<div class="overlay">
+				<div class="banner" id='informationTechnology'>
+					<div class="overlayNoTransition">
 						<p>Ingegneria Informatica</p>
 					</div>
 				</div>
 				<h2>Introduzione</h2>
 				<p>
-					Il corso di Ingegneria Informatica alla Da Vinci University ti darà un ottimo punto di partenza in questo campo emozionante. Con il nostro grandioso team di insegnanti, espanderai le tue conoscenze nel campo dell'Ingegneria Informatica. Puoi iniziare i tuoi studi senza nessuna conoscenza di base e il nostro team ti guiderà attraverso il corso rispondendo a tutte le tue domande.
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					Il corso di Ingegneria Informatica alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo dell'Ingegneria Elettronica. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
-				<h2>In cosa consiste</h2>
+				<h2>Contenuti</h2>
 				<p>
-					Primo anno - Fase di inizio. Nella prima metà, inizierai a conoscere il campo di Ingegneria Elettronica e ti abbituerai alle nuove quantità di studio. Secondo anno - L'attenzione si sposta su specifiche materie di studio: lingue di programmazione e database.
-					Terzo anno - Quest'anno farai pratica sul campo facendo tirocinio. Quarto anno - Andrai in uno scambio culturale - puoi scegliere la nazione che più ti interessa.
+					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
+					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: //*completare*//.
+					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
+					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
 				</p>
+				<h2>Career prospects</h2>
+				<p>
+					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+				<br><br></p>
+			</article>
+
+
+			<article>
+				<div class="banner" id='electronicMusic'>
+					<div class="overlayNoTransition">
+						<p>Electronic music</p>
+					</div>
+				</div>
+				<h2>Introduction</h2>
+				<p>
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+				</p>
+				<h2>Content</h2>
+				<p>
+					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
+					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
+				</p>
+				<h2>Career prospects</h2>
+				<p>
+					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+				<br><br></p>
+			</article>
+			
+			<article>
+				<div class="banner" id='classicalInstruments'>
+					<div class="overlayNoTransition">
+						<p>Classical instruments</p>
+					</div>
+				</div>
+				<h2>Introduction</h2>
+				<p>
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+				</p>
+				<h2>Content</h2>
+				<p>
+					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
+					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
+				</p>
+				<h2>Career prospects</h2>
+				<p>
+					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+				<br><br></p>
 			</article>
 			
 
@@ -77,10 +174,10 @@
 		</div>
 		<aside>
 			<div>
-				Novità
+				Newsfeed
 			</div>
 			<div>
-				Previsioni
+				Weather
 			</div>
 			<div id="social">
 				<div>
@@ -98,7 +195,7 @@
 	<footer>
 		<div class="footWrap">
 			<div class="footBox">
-				<h3>Dove siamo</h3>
+				<h3>Locations</h3>
 				<ul>
 					<li>Emmen</li>
 					<li>Groningen</li>
@@ -117,7 +214,7 @@
 				</ul>
 			</div>
 			<div class="footBox">
-				<h3>Registrati al Open Day</h3>
+				<h3>Open Day Registration</h3>
 			</div>
 		</div>
 	</footer>
