--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 
 			<div id="flag">
-				<img src="img/it_flag.png" alt="italian flag">
+				<a href="indexit.html"><img src="img/it_flag.png" alt="italian flag"></a>
 			</div>
 		</div>
 	</header>
@@ -31,12 +31,11 @@
 		<nav>
 			<ul>	
 				<li><a href="index.html">Home</a></li>
-				<li><a href="">About</a></li>
+				<li><a href="about.html">About</a></li>
 				<li><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
-
 			</ul>
 		</nav>
 	</div>
@@ -108,13 +107,12 @@
 			<div class="footBox">
 				<h3>Da Vinci University</h3>
 				<ul>
-					<li>Home</li>
-					<li>About</li>
-					<li>Courses</li>
-					<li>Events</li>
-					<li>News</li>
-					<li>Contact</li>
-
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="courses.html">Courses</a></li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="news.html">News</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<div class="footBox">
