--- a/events.html
+++ b/events.html
@@ -25,7 +25,7 @@
 			</div>
 
 			<div id="flag">
-				<img src="img/it_flag.png" alt="italian flag">
+				<a href="eventsit.html"><img src="img/it_flag.png" alt="italian flag"></a>
 			</div>
 		</div>
 	</header>
@@ -33,8 +33,8 @@
 		<nav>
 			<ul>	
 				<li><a href="index.html">Home</a></li>
-				<li><a href="">About</a></li>
-				<li><a href="">Courses</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
@@ -107,14 +107,13 @@
 			</div>
 			<div class="footBox">
 				<h3>Da Vinci University</h3>
-				<ul>
-					<li>Home</li>
-					<li>About</li>
-					<li>Courses</li>
-					<li>Events</li>
-					<li>News</li>
-					<li>Contact</li>
-
+				<ul>	
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="courses.html">Courses</a></li>
+					<li><a href="events.html">Events</a></li>
+					<li><a href="news.html">News</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<div class="footBox">
