--- a/coursesit.html
+++ b/coursesit.html
@@ -106,7 +106,6 @@
 				</div>
 				<h2>Introduzione</h2>
 				<p>
-					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
 					Il corso di Ingegneria Informatica alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo dell'Ingegneria Elettronica. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
 				<h2>Contenuti</h2>
@@ -116,7 +115,7 @@
 					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
 					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
 				</p>
-				<h2>Career prospects</h2>
+				<h2>Prospettive di Carriera</h2>
 				<p>
 					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
 				<br><br></p>
@@ -126,21 +125,21 @@
 			<article>
 				<div class="banner" id='electronicMusic'>
 					<div class="overlayNoTransition">
-						<p>Electronic music</p>
+						<p>Musica Elettronica</p>
 					</div>
 				</div>
-				<h2>Introduction</h2>
+				<h2>Introduzione</h2>
 				<p>
-					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					Il corso di Musica Elettronia alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo della Musica Elettronica. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
-				<h2>Content</h2>
+				<h2>Contenuti</h2>
 				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
-					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
-					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
+					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
+					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: //*completare*//.
+					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
+					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
 				</p>
-				<h2>Career prospects</h2>
+				<h2>Prospettive di Carriera</h2>
 				<p>
 					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
 				<br><br></p>
@@ -149,21 +148,21 @@
 			<article>
 				<div class="banner" id='classicalInstruments'>
 					<div class="overlayNoTransition">
-						<p>Classical instruments</p>
+						<p>Strumeti Classici</p>
 					</div>
 				</div>
-				<h2>Introduction</h2>
+				<h2>Introduzione</h2>
 				<p>
-					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					Il corso di Strumeti Classici alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo degli Strumenti Classici. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
-				<h2>Content</h2>
+				<h2>Contenuti</h2>
 				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
-					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
-					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
+					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
+					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: //*completare*//.
+					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
+					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
 				</p>
-				<h2>Career prospects</h2>
+				<h2>Prospettive di Carriera</h2>
 				<p>
 					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
 				<br><br></p>
@@ -174,10 +173,10 @@
 		</div>
 		<aside>
 			<div>
-				Newsfeed
+				Novità
 			</div>
 			<div>
-				Weather
+				Previsioni
 			</div>
 			<div id="social">
 				<div>
@@ -195,7 +194,7 @@
 	<footer>
 		<div class="footWrap">
 			<div class="footBox">
-				<h3>Locations</h3>
+				<h3>Dove siamo</h3>
 				<ul>
 					<li>Emmen</li>
 					<li>Groningen</li>
@@ -214,7 +213,7 @@
 				</ul>
 			</div>
 			<div class="footBox">
-				<h3>Open Day Registration</h3>
+				<h3>Registrati al Open Day</h3>
 			</div>
 		</div>
 	</footer>
