Linked webpages together

--- a/eventsit.html
+++ b/eventsit.html
@@ -36,7 +36,7 @@
 				<li><a href="aboutit.html">Su di noi</a></li>
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
-				<li><a href="newsit.html">Novità</a></li>
+				<li><a href="newsit.html.php">Novità</a></li>
 				<li><a href="contactit.html">Contatti</a></li>
 			</ul>
 		</nav>
@@ -111,7 +111,7 @@
 					<li><a href="aboutit.html">Su di noi</a></li>
 					<li><a href="coursesit.html">Corsi</a></li>
 					<li><a href="eventsit.html">Eventi</a></li>
-					<li><a href="newsit.html">Novità</a></li>
+					<li><a href="newsit.html.php">Novità</a></li>
 					<li><a href="contactit.html">Contatti</a></li>
 				</ul>
 			</div>
