compleated translation for courses. corrected 1 typo

--- a/courses.html
+++ b/courses.html
@@ -84,7 +84,7 @@
 				</div>
 				<h2>Introduction</h2>
 				<p>
-					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge and our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
 				<p>
@@ -165,7 +165,7 @@
 				</p>
 				<h2>Career prospects</h2>
 				<p>
-					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+					After you complete the course you can work as a classical instrument craftsman.
 				<br><br></p>
 			</article>
 			
