--- a/coursesit.html
+++ b/coursesit.html
@@ -95,7 +95,7 @@
 				</p>
 				<h2>Prospettive di Carriera</h2>
 				<p>
-					Dopo il completamento del corso potrai lavorare nel campo dell'Ingegneria Elettronica come ingegnere di qualità, dei software o degli hardware.
+					Dopo il completamento del corso potrai lavorare nel campo dell'Ingegneria Elettronica come ingegnere di qualità, dei software o degli hardware, analista di sistemi e molto altro.
 				<br><br></p>
 			</article>
 			<article>
@@ -111,13 +111,13 @@
 				<h2>Contenuti</h2>
 				<p>
 					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
-					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: //*completare*//.
+					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: ingegneria del software e database.
 					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
 					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
 				</p>
 				<h2>Prospettive di Carriera</h2>
 				<p>
-					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+					Dopo il completamento del corso potrai lavorare nel campo dell'Ingegneria informatica come ingegnere dei software, architetto del cloud, investigstore forense informatico e molto altro.
 				<br><br></p>
 			</article>
 
@@ -135,13 +135,13 @@
 				<h2>Contenuti</h2>
 				<p>
 					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
-					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: //*completare*//.
+					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche.
 					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
 					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
 				</p>
 				<h2>Prospettive di Carriera</h2>
 				<p>
-					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+					Dopo il completamento del corso potrai andare avanti con la tua carriera e lavorare nell'emozionante mondo delle arti.
 				<br><br></p>
 			</article>
 			
@@ -158,13 +158,13 @@
 				<h2>Contenuti</h2>
 				<p>
 					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
-					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: //*completare*//.
+					<br><br><b>Secondo anno</b> - L'attenzione si sposta maggiormente sull'acustica.
 					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
 					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
 				</p>
 				<h2>Prospettive di Carriera</h2>
 				<p>
-					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+					Dopo il completamento del corso potrai lavorare come un artigiano di strumenti classici.
 				<br><br></p>
 			</article>
 			
